# fiap-tech-challenge-fase-2

./: .gitignore  .pre-commit-config.yaml  dvc.yaml  main.py  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
configs/: .env
data/features/: .gitignore
data/processed/: .gitignore  movies_ratings.csv.dvc
data/raw/: movies.csv.dvc  ratings.csv.dvc
metrics/: .gitignore
mlruns/1/3c97fbae94554356aa3e0b5f7ef75c94/artifacts/models/: gradient_boosting_model.pkl  linear_regression_model.pkl  multi_layer_perceptron_model.pkl
mlruns/1/models/m-0ab59e4584e5414abaa4496b59815ae1/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-30156341b2fc479293d0070de04cfa02/artifacts/: MLmodel
mlruns/1/models/m-468da8310b6b4c929dab07e094a358e8/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-5587800cc4084177aeafdb0db977e6cf/artifacts/: MLmodel
models/: .gitignore
notebooks/: exploration.ipynb
scripts/: validate_env.py
src/features/: __init__.py  base.py  feature_engineering.py  preprocessor.py
src/features/baseline_feature_engineering/: __init__.py  gradient_boosting_feature_eng.py  linear_regression_feature_eng.py  random_forest_feature_eng.py
src/features/baseline_preprocessor/: __init__.py  gradient_boosting_preprocessor.py  linear_regression_preprocessor.py  random_forest_preprocessor.py
src/models/:  __init__.py  base.py  factory.py  mlp.py
src/pipeline/: evaluate.py  feature_eng.py  preprocess.py  train.py
tests/: test_features.py  test_models.py
tests/baseline_test/: test_baseline.py
tests/baseline_test_features/: test_baseline_features.py
(+9 files in other folders)
