[project]
name = "fiap-tech-challenge-fase-2"
version = "0.1.1"
description = "Tech challenge da fase 2 da pós tech em Engenharia de Machine Learning da FIAP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "mlflow>=3.12.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest tests/ -v"
repro = "dvc repro"
validate = "python scripts/validate_env.py"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
